--- a/sens.html
+++ b/sens.html
@@ -5,27 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap" rel="stylesheet"/>
     <title>Le délice des sens</title>
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/d21317d11a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <a href="./index.html">
+    <script src="https://kit.fontawesome.com/d21317d11a.js"crossorigin="anonymous"></script>
+    </head>
+
+    <body>
+      <a href="./index.html">
       <header>
         <h1>ohmyfood</h1>
         <i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
       </header>
     </a>
-
     <img src="restaurants/sens.jpg" alt="resto sens" />
-
     <main class="nom">
       <h2>Le délice des sens</h2>
       <section class="coeur">
@@ -35,18 +28,12 @@
           <i class="far fa-heart"></i>
         </label>
       </section>
-
       <section class="menus">
         <!--Entrées du menu-->
         <span class="menus__plats">
           <span class="h3">ENTREES</span>
           <span class="menu__plats__liste">
-            <input
-              class="btn-radio"
-              id="tartare_thon"
-              name="entree"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="tartare_thon"name="entree"type="radio"/>
             <label for="tartare_thon" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -54,17 +41,10 @@
                   <span class="p"> Assaisonné au yuzu </span>
                 </span>
                 <span class="menu-item__prix">25€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
-            <input
-              class="btn-radio"
-              id="homard_croustillant"
-              name="entree"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="homard_croustillant"name="entree"type="radio"/>
             <label for="homard_croustillant" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -72,18 +52,10 @@
                   <span class="p"> Et sa farandole de petits légumes </span>
                 </span>
                 <span class="menu-item__prix">35€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
-
-            <input
-              class="btn-radio"
-              id="veloute_cepes"
-              name="entree"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="veloute_cepes"name="entree"type="radio"/>
             <label for="veloute_cepes" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -91,9 +63,7 @@
                   <span class="p"> Aux truffes </span>
                 </span>
                 <span class="menu-item__prix">20€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
           </span>
@@ -102,12 +72,7 @@
         <span class="menus__plats">
           <span class="h3">PLATS</span>
           <span class="menu__plats__liste">
-            <input
-              class="btn-radio"
-              id="poulet_herbes"
-              name="plat"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="poulet_herbes"name="plat"type="radio"/>
             <label for="poulet_herbes" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -115,17 +80,10 @@
                   <span class="p"> Et sa crème de truffe </span>
                 </span>
                 <span class="menu-item__prix">40€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
-            <input
-              class="btn-radio"
-              id="langouste_rotie"
-              name="plat"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="langouste_rotie"name="plat"type="radio"/>
             <label for="langouste_rotie" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -133,9 +91,7 @@
                   <span class="p"> Et ses légumes de saison </span>
                 </span>
                 <span class="menu-item__prix">35€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
             <input class="btn-radio" id="cote_angus" name="plat" type="radio" />
@@ -146,9 +102,7 @@
                   <span class="p"> Et sa purée de panais </span>
                 </span>
                 <span class="menu-item__prix">44€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
           </span>
@@ -157,12 +111,7 @@
         <span class="menus__plats">
           <span class="h3">DESSERTS</span>
           <span class="menu__plats__liste">
-            <input
-              class="btn-radio"
-              id="farandole"
-              name="dessert"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="farandole"name="dessert"type="radio"/>
             <label for="farandole" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -170,17 +119,10 @@
                   <span class="p"> Du chef </span>
                 </span>
                 <span class="menu-item__prix">18€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
-            <input
-              class="btn-radio"
-              id="creme_brulee"
-              name="dessert"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="creme_brulee"name="dessert"type="radio"/>
             <label for="creme_brulee" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -188,17 +130,10 @@
                   <span class="p"> Revisitée </span>
                 </span>
                 <span class="menu-item__prix">22€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
-            <input
-              class="btn-radio"
-              id="tiramisu"
-              name="dessert"
-              type="radio"
-            />
+            <inputclass="btn-radio"id="tiramisu"name="dessert"type="radio"/>
             <label for="tiramisu" class="choix">
               <span class="menu-item">
                 <span class="menu-item__description">
@@ -206,9 +141,7 @@
                   <span class="p"> A la noisette </span>
                 </span>
                 <span class="menu-item__prix">23€</span>
-                <span class="menu-item__check">
-                  <i class="fas fa-check"></i>
-                </span>
+                <span class="menu-item__check"><i class="fas fa-check"></i></span>
               </span>
             </label>
           </span>
@@ -222,18 +155,18 @@
     <!--Footer-->
     <footer>
       <h2>ohmyfood</h2>
-      <h3>
-        <i class="fas fa-utensils"></i>
-        Proposer un restaurant
-      </h3>
+      <h3><i class="fas fa-utensils"></i>Proposer un restaurant</h3>
       <p>
         <i class="fas fa-hands-helping"></i>
         Devenir partenaire
       </p>
-      <p>Mentions légales</p>
       <p>
-        <a href="#">Contact</a>
+        Mentions légales
+      </p>
+      <p>
+        <a href="mailto:coline.miclard@hotmail.fr">Contact</a>
       </p>
     </footer>
-  </body>
-</html>
+    </body>
+    </html>
+    
